<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="workout"
            type="com.praveen.pilani.workout.viewmodel.WorkoutItem" />

        <variable
            name="handler"
            type="com.praveen.pilani.workout.ui.WorkoutItemRecyclerViewAdapter.EventHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background='@{@bool/isTwoPane ? @drawable/selectable_item_background : @drawable/transparent}'
        android:clickable="true"
        android:stateListAnimator="@animator/elevate_activated"
        app:onClickListener="@{handler.listItemClickListener}"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/activity_type"
            style="?attr/textAppearanceListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:padding="4dp"
            android:text="@{workout.activityType.displayName}"
            app:onClickListener="@{handler.activityTypeClicked}"
            tools:text="High intensity interval training" />


        <TextView
            android:id="@+id/duration_mins"
            style="?attr/textAppearanceListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_type"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:padding="4dp"
            android:text="@{@plurals/duration_mins_format(workout.durationInMinutes, workout.durationInMinutes)}"
            app:onClickListener="@{handler.durationMinsClicked}"
            tools:text="123 minutes" />

        <FrameLayout
            android:id="@+id/label_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/duration_mins"
            android:layout_toStartOf="@+id/delete_button"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/label"
                style="?attr/subtitleTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint"
                android:padding="4dp"
                android:text="@{workout.label}"
                app:onClickListener="@{handler.labelClicked}" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/delete_button"
            style="@style/borderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/label_frame"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/delete_button"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_delete_54perc_black_24dp"
            app:onClickListener="@{handler.deleteButtonClicked}" />


        <TextView
            android:id="@+id/schedules"
            style="?attr/subtitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_frame"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:hint="@string/schedules_hint"
            android:padding="4dp"
            android:text="@{workout.scheduleDisplay}"
            app:onClickListener="@{handler.schedulesClicked}" />


        <TextView
            android:id="@+id/calories"
            style="?attr/subtitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedules"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:hint="@string/calories_hint"
            android:padding="4dp"
            android:text='@{workout.calories != 0 ? @plurals/calories_format(workout.calories, workout.calories) : ""}'
            app:onClickListener="@{handler.caloriesClicked}" />


        <Button
            android:id="@+id/insert_session_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/calories"
            android:layout_margin="8dp"
            android:text="@string/insert_session_button"
            android:textColor="@color/colorAccent"
            app:onClickListener="@{handler.doneItButtonClicked}" />
    </RelativeLayout>
</layout>